// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@ast-decorators/transform-accessor @accessor compiles for decorator without interceptors 1`] = `
"class Foo {
  #_bar;

  get bar() {
    return this.#_bar;
  }

  set bar(_value) {
    this.#_bar = _value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @accessor preserves following decorators for both accessors 1`] = `
"import { other } from 'decorators';

class Foo {
  #_bar;

  @other()
  get bar() {
    return this.#_bar;
  }

  @other()
  set bar(_value) {
    this.#_bar = _value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @accessor preserves following decorators only for getter 1`] = `
"import { other } from 'decorators';

class Foo {
  #_bar;

  @other()
  get bar() {
    return this.#_bar;
  }

  set bar(_value) {
    this.#_bar = _value;
  }

}"
`;

exports[`@ast-decorators/transform-accessor @accessor preserves following decorators only for getter 2`] = `
"import { other } from 'decorators';

class Foo {
  #_bar;

  @other()
  get bar() {
    return this.#_bar;
  }

  @other()
  set bar(_value) {
    this.#_bar = _value;
  }

}"
`;
